Fixed alignment of skills spans on resume

--- a/public_src/stylesheets/takeontom.scss
+++ b/public_src/stylesheets/takeontom.scss
@@ -743,7 +743,7 @@ body.layout-resume {
             padding: 0;
             li {
                 margin: 0 0 0.5rem 0;
-                padding: 0 0 0 0.3rem;
+                padding: 0;
                 font-size: 0.8rem;
 
                 &:last-child {
@@ -756,7 +756,7 @@ body.layout-resume {
 
                 .desc {
                     margin-right: 1rem;
-                    margin-left: -0.5rem;
+                    // margin-left: -0.5rem;
 
                     &:last-child {
                         // margin-right: 0;
@@ -769,7 +769,7 @@ body.layout-resume {
                     display: inline-block;
                     // margin-left: 1rem;
                     margin-right: 1rem;
-                    padding-left: 0.1rem;
+                    // padding-left: 0.1rem;
                     font-size: 0.6rem;
                     color: #777;
                     // border-right: solid 1px #aaa;
@@ -778,9 +778,11 @@ body.layout-resume {
                         @include mixin-icon;
                         // padding-left: 0.2rem;
                         // padding-right: 0.2rem;
+                        position: relative;
+                        padding-right: 0.2rem;
+                        top: 0;
+                        left: 0;
                         color: #999;
-                        top: 0.1rem;
-                        left: -1em;
                         content: '\e804';
                         // content: '!';
                     }
